--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        Hello World, Just Kidding!
+        Hello World... Just Kidding!
     </body>
 </html>
