--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        Hello World... Just Kidding!
+        <h1>Hello World... Just Kidding!</h1>
+
+        <p><a href="exercises/exercise-02/index.html">Houses or Museums?</a> by Lina do Bardi</p>
     </body>
 </html>
