--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+       <title>Page Title</title>
     </head>
     <body>
         <h1>Hello World... Just Kidding!</h1>
