--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
         <h1>Hello World... Just Kidding!</h1>
 
         <p><a href="exercises/exercise-02/index.html">Houses or Museums?</a> by Lina do Bardi</p>
+
+        <p><a href="Project/Project%2002/Assignment01.html">Project 02-Assignment01</a></p>
+        <p><a href="Project/Project%2002/Assignment02.html">Project 02-Assignment02</a></p>
     </body>
 </html>
