--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
         <p><a href="exercises/exercise-02/index.html">Houses or Museums?</a> by Lina do Bardi</p>
 
-        <p><a href="Project/Project%2002/Assignment01.html">Project 02-Assignment01</a></p>
-        <p><a href="Project/Project%2002/Assignment02.html">Project 02-Assignment02</a></p>
+        <p><a href="Project/Project-02/Assignment01.html">Project 02-Assignment01</a></p>
+        <p><a href="Project/Project-02/Assignment02.html">Project 02-Assignment02</a></p>
+        <p><a href="Project/Project-02/Assignment03.html">Project 02-Assignment03</a></p>
     </body>
 </html>
