--- a/Project/Project-02/Assignment03.html
+++ b/Project/Project-02/Assignment03.html
@@ -7,7 +7,7 @@
         <h3>Cyberpunk 2077</h3>
         <p><strong>Just</strong> a picture of <strong><em>Cyberpunk 2077</em></strong></p>
         <p><img
-            src="image/2077.png"
+            src="E:\Picture\Cyberpunk 2077.png"
             alt="CDPR"></p>
     </body>
 </html>
