--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <p><a href="Project/Project-02/Assignment01.html">Project 02-Assignment01</a></p>
         <p><a href="Project/Project-02/Assignment02.html">Project 02-Assignment02</a></p>
         <p><a href="Project/Project-02/Assignment03.html">Project 02-Assignment03</a></p>
+        <p><a href="Project/Project-02/Assignment04.html">Project 02-Assignment04</a></p>
     </body>
 </html>
