--- a/Project/Project-02/Assignment01.html
+++ b/Project/Project-02/Assignment01.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Checklist</title>
+        <title>National Pokédex Generation I-IV</title>
     </head>
     <body>
-        <h3>Checklist</h3>
-        <ul>
-            <li>Face Mask</li>
-            <li>Umbrella</li>
-            <li>Cell Phone</li>
-            <li>Clothes</li>
-        </ul>
+        <h4>Generation I</h4>
+        <ol>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Bulbasaur_(Pok%C3%A9mon)">Bulbasaur</a></li>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Ivysaur_(Pok%C3%A9mon)">Ivysaur</a></li>
+        </ol>
+        <p>...</p>
+        <ol start="150">
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Mewtwo_(Pok%C3%A9mon)">Mewtwo</a></li>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Mew_(Pok%C3%A9mon)">Mew</a></li>
+        </ol>
+        <p></p>
+        <h4>Generation II</h4>
+        <ol start="152">
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Chikorita_(Pok%C3%A9mon)">Chikorita</a></li>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Bayleef_(Pok%C3%A9mon)">Bayleef</a></li>
+        </ol>
+        <p>...</p>
+        <ol start="250">
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Ho-Oh_(Pok%C3%A9mon)">Ho-oh</a></li>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Celebi_(Pok%C3%A9mon)">Celebi</a></li>
+        </ol>
+        <p></p>
+        <h4>Generation III</h4>
+        <ol start="252">
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Treecko_(Pok%C3%A9mon)">Treecko</a></li>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Grovyle_(Pok%C3%A9mon)">Grovyle</a></li>
+        </ol>
+        <p>...</p>
+        <ol start="385">
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Jirachi_(Pok%C3%A9mon)">Jirachi</a></li>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Deoxys_(Pok%C3%A9mon)">Deoxys</a></li>
+        </ol>
+        <p></p>
+        <h4>Generation IV</h4>
+        <ol start="387">
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Turtwig_(Pok%C3%A9mon)">Turtwig</a></li>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Grotle_(Pok%C3%A9mon)">Grotle</a></li>
+        </ol>
+        <p>...</p>
+        <ol start="492">
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Shaymin_(Pok%C3%A9mon)">Shaymin</a></li>
+            <li><a href="https://bulbapedia.bulbagarden.net/wiki/Arceus_(Pok%C3%A9mon)">Arceus</a></li>
+        </ol>
+        <p></p>
     </body>
 </html>
