--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <p><a href="Project/Project-02/Assignment02.html">Project 02-Assignment02</a></p>
         <p><a href="Project/Project-02/Assignment03.html">Project 02-Assignment03</a></p>
         <p><a href="Project/Project-02/Assignment04.html">Project 02-Assignment04</a></p>
+        <p><a href="Project/Project-02/Assignment05.html">Project 02-Assignment05</a></p>
     </body>
 </html>
