--- a/Project/Project-02/Assignment02.html
+++ b/Project/Project-02/Assignment02.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chinese Color</title>
+        <title>Checklist</title>
     </head>
     <body>
-        <h3>Chinese Color</h3>
-        <h4>Copyright © 2013 by  Perchouli</h4>
-        <p><em>Chinese Color</em> is a website to find <strong>Traditional</strong> Chinese Colors.</p>
-        <a href="http://zhongguose.com/">Click here!</a>
+        <h3>Checklist</h3>
+        <ul>
+            <li>Face Mask</li>
+            <li>Umbrella</li>
+            <li>Cell Phone</li>
+            <li>Clothes</li>
+        </ul>
     </body>
 </html>
