--- a/in-class/index.html
+++ b/in-class/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div>
-       <header></header>
-       <nav></nav>
+   <div class="container">
+       <header>Header</header>
+       <nav>Navigation</nav>
        <main>
-           <aside></aside>
-           <section></section>
-           <aside></aside>
-           </main>
-           <footer></footer>
+           <aside>Aside</aside>
+           <section>Section</section>
+           <aside>Aside</aside>
+        </main>
+        <footer>Footer</footer>
    </div> 
 </body>
 </html>
