--- a/in-class/index.html
+++ b/in-class/index.html
@@ -14,7 +14,7 @@
        <main>
            <aside>Aside</aside>
            <section>Section</section>
-           <aside>Aside</aside>
+           <aside class="box">Aside</aside>
         </main>
         <footer>Footer</footer>
    </div> 
