--- a/Project/Project-03/page_05.html
+++ b/Project/Project-03/page_05.html
@@ -25,12 +25,12 @@
     <div class="container">
         <header>
             <img src="assets/Logo.png" alt="Personal Logo">
-            <div class="title"><h1>EC's Picture Record</h1></div>
+            <div class="title"><h1>Rick Roll</h1></div>
         </header>
         <nav>
             <ul class="Nav">
                 <li class="Nav2"><a href="./index.html">Home</a></li>
-                <li class="thisPage"><a href="./page_02.html">Journey</a></li>
+                <li class="Nav2"><a href="./page_02.html">Journey</a></li>
                 <li class="Nav2"><a href="./page_03.html">Gourmet</a></li>
                 <li class="Nav2"><a href="./page_04.html">Games</a></li>
             </ul>
