--- a/Project/Project-03/index.html
+++ b/Project/Project-03/index.html
@@ -45,7 +45,7 @@
             <br>
             <h4>Copyright</h4>
             <br>
-        <p>            Erxiao Chu holds copyright in the information available on this Web site, unless otherwise stated. Copyright in any third-party materials found on this Web site must also be respected. The logo may not be used without express written permission of the Erxiao Chu.</p>
+        <p>            Erxiao Chu holds copyright in the information available on this Web site, unless otherwise stated. Copyright in any third-party materials found on this Web site must also be respected. The logo may not be used without express written permission of Erxiao Chu.</p>
         </div>
     </div>
     </div>
