--- a/Project/Project-03/page_04.html
+++ b/Project/Project-03/page_04.html
@@ -31,7 +31,7 @@
             <ul class="Nav">
                 <li class="Nav2"><a href="./index.html">Home</a></li>
                 <li class="Nav2"><a href="./page_02.html">Journey</a></li>
-                <li class="Nav2"><a href="./page_03.html">Gourmet</a></li>
+                <li class="Nav2"><a href="./page_03.html">Cuisine</a></li>
                 <li class="thisPage"><a href="./page_04.html">Games</a></li>
             </ul>
         </nav>
