--- a/Project/Project-02/index1.html
+++ b/Project/Project-02/index1.html
@@ -48,6 +48,6 @@
             <li><a href="https://bulbapedia.bulbagarden.net/wiki/Shaymin_(Pok%C3%A9mon)">Shaymin</a></li>
             <li><a href="https://bulbapedia.bulbagarden.net/wiki/Arceus_(Pok%C3%A9mon)">Arceus</a></li>
         </ol>
-        <p></p>
+        <p><a href="Project/Project-02/index.html">HOME</a></p>
     </body>
 </html>
