--- a/Project/Project-02/index2.html
+++ b/Project/Project-02/index2.html
@@ -11,5 +11,6 @@
             <li>Cell Phone</li>
             <li>Clothes</li>
         </ul>
+        <p><a href="Project/Project-02/index.html">HOME</a></p>
     </body>
 </html>
