--- a/Project/Project-02/index5.html
+++ b/Project/Project-02/index5.html
@@ -8,5 +8,6 @@
         <h4>Copyright © 2013 by  Perchouli</h4>
         <p><em>Chinese Color</em> is a website to find <strong>Traditional</strong> Chinese Colors.</p>
         <a href="http://zhongguose.com/">Click here!</a>
+        <p><a href="Project/Project-02/index.html">HOME</a></p>
     </body>
 </html>
