--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <title>Page Title</title>
+       <title>Hello World</title>
     </head>
     <body>
         <h1>Hello World... Just Kidding!</h1>
 
-        <p><a href="exercises/exercise-02/index.html">Houses or Museums?</a> by Lina do Bardi</p>
+        <h4>Exercises</h4>
+        <p><a href="exercises/exercise-02/index.html">Markup Lina Bo Bardi</a></p>
+        <p><a href="exercises/exercise-03/index.html">Style Lina Bo Bardi</a></p>
+        <p><a href="exercises/exercise-04/index.html">Layout Lina Bo Bardi with Flexbox</a></p>
+        <p><a href="exercises/exercise-05/index.html">Responsive Lina Bo Bardi</a></p>
+        <p><a href="exercises/exercise-06/index.html">Navigation Animation</a></p>
+        <p><a href="exercises/exercise-07/index.html">Sentence Generator</a></p>
+        <p><a href="exercises/exercise-08/index.html">Color Scheme Switcher</a></p>
 
-        <p><a href="Project/Project-02/Assignment01.html">Project 02-Assignment01</a></p>
-        <p><a href="Project/Project-02/Assignment02.html">Project 02-Assignment02</a></p>
-        <p><a href="Project/Project-02/Assignment03.html">Project 02-Assignment03</a></p>
-        <p><a href="Project/Project-02/Assignment04.html">Project 02-Assignment04</a></p>
-        <p><a href="Project/Project-02/Assignment05.html">Project 02-Assignment05</a></p>
+        <h4>Projects</h4>
+        <p><a href="https://www.are.na/erxiao-chu/coding-erxiao">Image Journal</a></p>
+        <p><a href="Project/Project-02/index.html">HTML HTML HTML</a></p>
+        <p><a href="Project/Project-03/index.html">Personal website</a></p>
+
+
+
     </body>
 </html>
