--- a/exercises/exercise-03/index.html
+++ b/exercises/exercise-03/index.html
@@ -4,7 +4,7 @@
     <title>Houses or Museums?</title>
 </head>
 <body>
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles.css">
     
     
 <div class="container"> 
