--- a/exercises/exercise-03/index.html
+++ b/exercises/exercise-03/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Houses or Museums?</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
