--- a/exercises/exercise-07/index.html
+++ b/exercises/exercise-07/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Sentence Generator</h1>
+    <button onclick="sentence()">Generate </button>
 
+    <p id="sentence"></p>  
 
     <script src="script.js"></script>
 </body>
