--- a/Project/Project-02/index.html
+++ b/Project/Project-02/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h2>Project 02 </h2>
-    <p><a href="/Project/Project-02/index1.html">HTML01</a></p>
-    <p><a href="/Project/Project-02/index2.html">HTML02</a></p>
-    <p><a href="/Project/Project-02/index3.html">HTML03</a></p>
-    <p><a href="/Project/Project-02/index4.html">HTML04</a></p>
-    <p><a href="/Project/Project-02/index5.html">HTML05</a></p>
+    <p><a href="./index1.html">HTML01</a></p>
+    <p><a href="./index2.html">HTML02</a></p>
+    <p><a href="./index3.html">HTML03</a></p>
+    <p><a href="./index4.html">HTML04</a></p>
+    <p><a href="./index5.html">HTML05</a></p>
 
 </body>
 </html>
